add back to top button to page

--- a/food_menu.html
+++ b/food_menu.html
@@ -29,8 +29,10 @@
 </head>
 
 <body>
-      <!--::header part start::-->
-      <header class="main_menu home_menu">
+    <a href="#" id="toTopBtn">
+    </a>
+    <!--::header part start::-->
+    <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
