--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
 </head>
 
 <body>
+  <a href="#" id="toTopBtn">
+  </a>
       <!--::header part start::-->
       <header class="main_menu home_menu">
         <div class="container">
