--- a/elements.html
+++ b/elements.html
@@ -29,6 +29,8 @@
 </head>
 
 <body>
+	<a href="#" id="toTopBtn">
+    </a>
     <!--::header part start::-->
     <header class="main_menu">
 		<div class="container">
