--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <body>
     <!--::header part start::-->
+    <a href="#" id="toTopBtn">
+    </a>
     <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
@@ -504,7 +506,7 @@
                                 <a href="#" class="date_item"> <span>#</span> Loài dế </a>
                             </div>
                             <h3><a href="blog.html">Dế mèn và các thông tin thú vị có thể bạn chưa biết</a></h3>
-                            <a href="#" class="btn_3">Đọc <img src="img/icon/left_1.svg" alt=""></a>
+                            <a href="#" class="btn_3">Xem thêm<img src="img/icon/left_1.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -519,7 +521,7 @@
                                 <a href="#" class="date_item"> <span>#</span> Food News </a>
                             </div>
                             <h3><a href="blog.html">Dế Sấy Cay Giòn thực phẩm sấy làm đồ nhậu</a></h3>
-                            <a href="#" class="btn_3">Xem thêm <img src="img/icon/left_1.svg" alt=""></a>
+                            <a href="#" class="btn_3">Xem thêm<img src="img/icon/left_1.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -534,7 +536,7 @@
                                 <a href="#" class="date_item"> <span>#</span> Loài dế </a>
                             </div>
                             <h3><a href="blog.html">Dế mèn và các thông tin thú vị có thể bạn chưa biết</a></h3>
-                            <a href="#" class="btn_3">Đọc <img src="img/icon/left_1.svg" alt=""></a>
+                            <a href="#" class="btn_3">Xem thêm<img src="img/icon/left_1.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -548,7 +550,7 @@
                             <a href="#" class="date_item"> <span>#</span> Food News </a>
                         </div>
                         <h3><a href="blog.html">Dế Sấy Cay Giòn thực phẩm sấy làm đồ nhậu</a></h3>
-                        <a href="#" class="btn_3">Xem thêm <img src="img/icon/left_1.svg" alt=""></a>
+                        <a href="#" class="btn_3">Xem thêm<img src="img/icon/left_1.svg" alt=""></a>
                     </div>
                 </div>
             </div>
