--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
-                            <h2>Our Blog</h2>
+                            <h2>Bài Đăng</h2>
                         </div>
                     </div>
                 </div>
